--- a/paper/CADE/sources.bib
+++ b/paper/CADE/sources.bib
@@ -104,7 +104,7 @@
 
 @article{zfc_in_hol_afp,
   author  = {Lawrence C. Paulson},
-  title   = {Zermelo Fraenkel Set Theory in Higher-Order Logic},
+  title   = {{Zermelo} {Fraenkel} Set Theory in Higher-Order Logic},
   journal = {Archive of Formal Proofs},
   month   = {October},
   year    = {2019},
@@ -216,7 +216,7 @@
 
 @article{mlss_first,
 author = {Ferro, Alfredo and Omodeo, Eugenio G. and Schwartz, Jacob T.},
-title = {Decision procedures for elementary sublanguages of set theory. I. Multi-level syllogistic and some extensions},
+title = {Decision procedures for elementary sublanguages of set theory. {I}. {Multi}-level syllogistic and some extensions},
 journal = {Communications on Pure and Applied Mathematics},
 volume = {33},
 number = {5},
@@ -227,7 +227,7 @@ year = {1980}
 
 @article{mlss_np,
 author = {Cantone, Domenico and Omodeo, Eugenio G. and Policriti, Alberto},
-title = {The Automation of Syllogistic. II. Optimization and Complexity Issues},
+title = {The Automation of Syllogistic},
 year = {1990},
 publisher = {Springer},
 volume = {6},
@@ -369,7 +369,7 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
 @InProceedings{ctl_tableau,
   author="Doczkal, Christian and Smolka, Gert",
   editor="Klein, Gerwin and Gamboa, Ruben",
-  title="Completeness and Decidability Results for CTL in Coq",
+  title="Completeness and Decidability Results for {CTL} in {Coq}",
   booktitle="Interactive Theorem Proving",
   year="2014",
   publisher="Springer International Publishing",
